# EOS

./: LICENSE  README.md
eos_core/: CMakeLists.txt  package.xml
launch/: robot.launch
src/controller_input/: CMakeLists.txt  package.xml
src/controller_input/src/: controller_map.py
src/eos_core/: CMakeLists.txt  package.xml
src/eos_core/src/: main.cpp
src/eos_msgs/: CMakeLists.txt  package.xml
src/eos_msgs/msg/: Motor.msg  gamepad_output.msg
src/eos_urdf/: CMakeLists.txt  package.xml  robot.urdf
src/motor_driver/: CMakeLists.txt  package.xml
src/motor_driver/include/: DRF0601.h  escdriver.h
src/motor_driver/src/: DRF0601.cpp  driverinterface.h  escdriver.cpp  escdriver.h  motordriver.cpp
