<?xml version="1.0"?>
<package format="2">
  <name>controller_input</name>
  <version>0.0.0</version>
  <description>Package for getting information from a user controller gampad or custom controller.</description>

  <maintainer email="nicholas.skinner@protonmail.com">Nick Skinner</maintainer>
  <author email="nicholas.skinner@protonmail.com">Nick Skinner</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eos_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>eos_msgs</exec_depend>

  <export></export>
</package>
