<?xml version="1.0"?>
<package format="2">
  <name>eos_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages repository for EOS publisher/subscribers.</description>

  <maintainer email="nicholas.skinner@protonmail.com">Nick Skinner</maintainer>
  <author email="nicholas.skinner@protonmail.com">Nick Skinner</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
