<?xml version="1.0"?>
<package format="2">
  <name>motor_driver</name>
  <version>0.0.0</version>
  <description>Drivers for various motors that the EOS robot may use.</description>

  <maintainer email="nicholas.skinner@protonmail.com">Nick Skinner</maintainer>
  <author email="nicholas.skinner@protonmail.com">Nick Skinner</author>

  <license>MIT</license>
  

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export></export>
</package>
